# set_anomaly_prediction

./: .gitignore  README.md  gitignore  pyproject.toml  requirements.txt
config/trainer/: default.yaml
notebooks/: 04_model_profiling.ipynb
notes/: day_01.md  day_02.md  day_03.md  day_04.md  day_05.md
src/data/: data_module.py  dataset_prep.py
src/lightning_module/: predictor.py
src/models/: attention.py  modules.py
src/scripts/: run_sweep.py  train.py
tests/: conftest.py  smoke_test.py  test_attention.py  test_modules.py  test_predictor.py  test_shapes.py
